# greeter

./: .gitignore  Main.hs  flake.nix  greeter.cabal
src/: ConsoleIO.hs  Greeter.hs
test/: Test.hs
